--- a/GFM/localisation/00_GSG_countries.csv
+++ b/GFM/localisation/00_GSG_countries.csv
@@ -123,7 +123,7 @@ AAA_liberal_3;Reformists;;;;;;;;;;;;;
 AAA_liberal_4;Liberal Democrats;;;;;;;;;;;;;
 AAA_liberal_5;National Liberal Party;;;;;;;;;;;;;
 AAA_socialist_1;National Socialists;;;;;;;;;;;;;
-AAA_socialist_2;Labour Party;;;;;;;;;;;;;
+AAA_socialist_2;Labor Party;;;;;;;;;;;;;
 AAA_socialist_3;People's Party;;;;;;;;;;;;;
 AAA_socialist_4;Social Democrats;;;;;;;;;;;;;
 AAA_socialist_5;Progressivists;;;;;;;;;;;;;
