--- a/GFM/localisation/00_GSG_events.csv
+++ b/GFM/localisation/00_GSG_events.csv
@@ -148,7 +148,7 @@ EVTDESC188115;Imam Shamil has gained power and become the Imam of the Caucasian 
 EVTOPTA188115;Let us fight back!;;;;;;;;;;;;;
 EVTOPTB188115;Attempt to pull out of our weaker outposts.;;;;;;;;;;;;;
 EVTNAME188116;United Circassian Offensive;;;;;;;;;;;;;
-EVTDESC188116;The Circassian resistance has managed to take out our minor outposts through sneak attacks, seizing supply depots, and what can be termed guerilla warfare. Although we have suffered much, our ready state of alertness prevented an overly large massacre of our people and has prevented our major outposts and fortresses from being overrun by the Circassians.;;;;;;;;;;;;;
+EVTDESC188116;The Circassian resistance has managed to take out our minor outposts through sneak attacks, seizing supply depots, and what can be termed guerrilla warfare. Although we have suffered much, our ready state of alertness prevented an overly large massacre of our people and has prevented our major outposts and fortresses from being overrun by the Circassians.;;;;;;;;;;;;;
 EVTOPTA188116;They will pay for this!;;;;;;;;;;;;;
 EVTNAME188117;United Circassian Offensive;;;;;;;;;;;;;
 EVTDESC188117;Although we attempted to pull out of our weaker outposts, the Circassians have ambushed our traveling forces and seized our supplies. Our larger outposts relied on these smaller reinforcements to properly defend, and we have suffered some losses in our major military and civilian centers. This perceived weakness has given the Circassians free reign to massacre our people, and has shamed us on a world scale.;;;;;;;;;;;;;
@@ -290,7 +290,7 @@ EVTOPTA187100;Finally, we can assimilate them into the Confederate nation.;;;;;;
 SLAVETRADEEND;An End to the Slave Trade;;;;;;;;;;;;;
 EVTDESC186500;With the abolition of slavery in our country, so too will we block the world's slave trade.;;;;;;;;;;;;;
 EVTOPTA186500;Slavery is no more, for the good of our nation! §GLose 4 infamy§W;;;;;;;;;;;;;
-MASSLABOUROVER;Mass Labour Outlawed;;;;;;;;;;;;;
+MASSLABOUROVER;Mass Labor Outlawed;;;;;;;;;;;;;
 EVTOPTA186000;We've moved past our old barbaric ways once and for all. §GLose 1 infamy§W;;;;;;;;;;;;;
 SLAVETRADEOVERBAD;Slave Trade Ended!;;;;;;;;;;;;;
 EVTOPTA185000;This is an outrage!;;;;;;;;;;;;;
@@ -325,7 +325,7 @@ EVTTITLE187926;Progressive Society in $PROVINCENAME$;;;;;;;;;;;;;
 EVTDESC187926;Capitalists have formed what they call a "Progressive Society" in $PROVINCENAME$, hoping to bring an end to slavery. Their reasoning is that slavery, as a rural, plantation-based economic model, has no place in a nation attempting to industrialize and compete in the modern economy.;;;;;;;;;;;;;
 EVTTITLE187930;$PROVINCENAME$ Slaves and Marx;;;;;;;;;;;;;
 EVTDESC187930;In the plantation fields of $PROVINCENAME$, the sound of "The Internationale" can be heard more loudly and frequently than old slave songs. Many working slaves, having learned to read, have also learned about the philosophies of men like Karl Marx, and his vision of a world without social classes. What they intend should be obvious, considering their situation in our country.;;;;;;;;;;;;;
-EVTTITLE187935;Cheap Labour in $PROVINCENAME$!;;;;;;;;;;;;;
+EVTTITLE187935;Cheap Labor in $PROVINCENAME$!;;;;;;;;;;;;;
 EVTDESC187935;Factories dot the landscape where once there used to be plantations and farms that ran on the blood and sweat of slaves. In this new $COUNTRY$, though, employers have begun hiring cheap workers, often immigrants, because the cost of keeping slaves has become unsustainable for many. Arguments could be made against them that they are sabotaging the economy, but in a free economy, they have the right to employ whomever they choose.;;;;;;;;;;;;;
 EVTDESC187940;Two Confederate diplomats, hoping to establish good relations with our country, are aboard the HMS Trent. We have received urgent news lately, however, that the American USS San Jacinto has intercepted the Trent and taken the diplomats as prisoners. This can be seen as an act of war on British territory, and many are calling for an American apology and reparations for this insult.;;;;;;;;;;;;;
 EVTDESC187942;We have received word that the British, after their HMS Trent was commandeered by a Union captain on the USS San Jacinto. The Trent is carrying two Confederate diplomats, en route to Britain and France, no doubt in order to coerce them into joining the war. The British are demanding an apology from our officials and the immediate release of the diplomats, and have been making isolated showings of force along the Canadian border.;;;;;;;;;;;;;
@@ -493,7 +493,7 @@ EVTDESC201053;The blue heaven. The golden sun. Grey stones and mountains. Nothin
 EVTNAME201054;The Temple of the Sun;;;;;;;;;;;;;
 EVTDESC201054;The sunset brightens the sky in red colors, shining on stones. Stones of a building. On the top of a plateau, an old temple sits enthroned like an Incan god-king above the Andes. I tether the llamas, but Henry keeps going forward. "On my voyages in Peru, I never saw a Incan temple in such a good shape", he mentions. "That is an extraordinary discovery. The archaeologists at home would be astonished." I go forward, Henry waits instead, putting his hand on the stone. He observes the strange engravings. "Any information?", I ask, but he denies. "That seems to be a very strange place. I can't interpret this figures. It's a shame that the Incas have no writing or hieroglyphs as the Mayas do, so everything remains obscure.";;;;;;;;;;;;;
 EVTNAME201055;War Interrupts Expedition;;;;;;;;;;;;;
-EVTDESC201055;The communication between our expedition in Peru and our archaeological society is interupted. Until the war goes on, our enemies will try to disturb every information exchange.;;;;;;;;;;;;;
+EVTDESC201055;The communication between our expedition in Peru and our archaeological society is interrupted. Until the war goes on, our enemies will try to disturb every information exchange.;;;;;;;;;;;;;
 EVTNAME201056;Expedition in Peru Responds Again;;;;;;;;;;;;;
 EVTDESC201056;Immedietly after the end of the war, the expedition in Peru has contacted us again.;;;;;;;;;;;;;
 EVTNAME201037;Tutankhamun's Tomb Discovered;;;;;;;;;;;;;
