--- a/GFM/localisation/00_GSG_modifiers.csv
+++ b/GFM/localisation/00_GSG_modifiers.csv
@@ -165,7 +165,7 @@ detroit_growth;Detroit Growing;;;;;;;;;;;;;
 slave_growth;Slave Demographics;;;;;;;;;;;;;
 slave_growth_desc;The population of slaves changed in our country.;;;;;;;;;;;;;
 pompeji_excavations;The Ancient Civitas of Pompeii;;;;;;;;;;;;;
-pompeji_excavations_desc;Archaeologic studies in Pompeii enhance our national science and reputation.;;;;;;;;;;;;;
+pompeji_excavations_desc;Archaeological studies in Pompeii enhance our national science and reputation.;;;;;;;;;;;;;
 mycenaean_excavations;Mycenaean Excavations;;;;;;;;;;;;;
 minoan_excavations;Minoan Excavations;;;;;;;;;;;;;
 maya_excavations;The Forgotten Cities of Yucatan;;;;;;;;;;;;;
@@ -176,7 +176,7 @@ mesopotamian_excavations;The Cradle of Civilization;;;;;;;;;;;;;
 local_excavations;Local Excavations;;;;;;;;;;;;;
 local_excavations_desc;Local excavations are held to train our archaeologists.;;;;;;;;;;;;;
 inca_excavations_interrupted;Contact to Expedition Lost;;;;;;;;;;;;;
-inca_excavations_interrupted_desc;The communication between our expedition in Peru and our archaeological society is interupted. Until the war goes on, our enemies will try to disturb every information exchange.;;;;;;;;;;;;;
+inca_excavations_interrupted_desc;The communication between our expedition in Peru and our archaeological society is interrupted. Until the war goes on, our enemies will try to disturb every information exchange.;;;;;;;;;;;;;
 galicia_lodomeria;Galician Administration;;;;;;;;;;;;;
 hurricane_damage;Hurricane Damage;;;;;;;;;;;;;
 panama_canal_treaty_annuity;Panama Canal Treaty Annuity;;;;;;;;;;;;;
