--- a/GFM/localisation/00_HPM_Misc.csv
+++ b/GFM/localisation/00_HPM_Misc.csv
@@ -649,7 +649,7 @@ rehabilitation;Rehabilitation;;;;;;;;;;;;;
 rehabilitation_l;Rehabilitation;;;;;;;;;;;;;
 rehabilitation_desc;Convicts are imprisoned with the intent of reforming them and reintroducing them into society.;;;;;;;;;;;;;
 movement_rehabilitation;Rehabilitation of Prisoners Campaign;;;;;;;;;;;;;
-EVTNAME34608;Child Labour Law Passed;;;;;;;;;;;;;
+EVTNAME34608;Child Labor Law Passed;;;;;;;;;;;;;
 EVTDESC34608;Following Britain's lead, in $YEAR$ Prussia, under the influence of some religious and social figures, passed a law strictly regulating the amount of child labour that was possible during the year. According to the new legislation, the Prussian government will lay down restrictions on child labor, with the following main points: children under the age of nine are banned from factory labor, children needed to have had at least three years of schooling before working, and children under the age of sixteen could work no more than ten hours per day. Other provisions included mandated rest times and a total ban on night work for children.;;;;;;;;;;;;;
 EVTOPTA34608;Those poor children!;;;;;;;;;;;;;
 EVTOPTB34608;This isn't really necessary. Revoke the law.;;;;;;;;;;;;;
