--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -134,7 +134,7 @@ UKR_conservative;Ukrainian Democratic Agrarian Party;;;;;;;;;;;;;
 UKR_liberal;Ukrainian Democratic Party;;;;;;;;;;;;;
 UKR_reactionary;Congress of Landowners;;;;;;;;;;;;;
 UKR_radical;Ukrainian Radical Party;;;;;;;;;;;;;
-UKR_socialist;Ukrainian Social Democratic Labour Party;;;;;;;;;;;;;
+UKR_socialist;Ukrainian Social Democratic Labor Party;;;;;;;;;;;;;
 UKR_communist;Ukrainian Communist Party;;;;;;;;;;;;;
 UKR_fascist;Organization of Ukrainian Nationalists;;;;;;;;;;;;;
 TUN;Tunisia;;;;;;;;;;;;;
@@ -242,7 +242,7 @@ UBD_proletarian_dictatorship;The Baltic Worker's Union;;;;;;;;;;;;;
 UBD_fascist;Baltic Fascist Union;;;;;;;;;;;;;
 UBD_communist;Baltic Communist Party;;;;;;;;;;;;;
 UBD_socialist;Union of Baltic Workers and Socialists;;;;;;;;;;;;;
-UBD_socialist_2;Baltic Labour Party;;;;;;;;;;;;;
+UBD_socialist_2;Baltic Labor Party;;;;;;;;;;;;;
 UBD_radicals;Radical Party;;;;;;;;;;;;;
 UBD_liberal_2;The All-Baltic Landtag;;;;;;;;;;;;;
 UBD_liberal;Progressive Union;;;;;;;;;;;;;
@@ -1041,7 +1041,7 @@ FSM_ADJ;Micronesian;Micronesian;Micronesian;;;;;;;;;;;
 FSM_liberal;Liberal Party;Liberal Party;Liberal Party;;;;;;;;;;;
 FSM_conservative;Conservative Party;Conservative Party;Conservative Party;;;;;;;;;;;
 FSM_reactionary;Nationalist Party;Nationalist Party;Nationalist Party;;;;;;;;;;;
-FSM_socialist;Labour Party;Labour Party;Labour Party;;;;;;;;;;;
+FSM_socialist;Social Democratic Party;Labour Party;Labour Party;;;;;;;;;;;
 FSM_radical;Radical Party;Radical Party;Radical Party;;;;;;;;;;;
 FSM_communist;Communist Party;Communist Party;Communist Party;;;;;;;;;;;
 FSM_fascist;Fascist Party;Fascist Party;Fascist Party;;;;;;;;;;;
@@ -2041,7 +2041,7 @@ SMI_ADJ;Sami;Sami;Sami;;;;;;;;;;;
 SMI_liberal;Liberal Party;Liberal Party;Liberal Party;;;;;;;;;;;
 SMI_conservative;Conservative Party;Conservative Party;Conservative Party;;;;;;;;;;;
 SMI_reactionary;Nationalist Party;Nationalist Party;Nationalist Party;;;;;;;;;;;
-SMI_socialist;Labour Party;Labour Party;Labour Party;;;;;;;;;;;
+SMI_socialist;Labor Party;Labour Party;Labour Party;;;;;;;;;;;
 SMI_radical;Radical Party;Radical Party;Radical Party;;;;;;;;;;;
 SMI_communist;Communist Party;Communist Party;Communist Party;;;;;;;;;;;
 SMI_fascist;Fascist Party;Fascist Party;Fascist Party;;;;;;;;;;;
