--- a/GFM/localisation/FlavoursModNewCountries.csv
+++ b/GFM/localisation/FlavoursModNewCountries.csv
@@ -296,7 +296,7 @@ MON_theocracy;The Prince-Bishopric of Montenegro;;;;;;;;;;;;;
 VLG_fascist;Volga Fascist Union;;;;;;;;;;;;;
 VLG_communist;Volga German Workers' Party;;;;;;;;;;;;;
 VLG_socialist;Union of Volga Workers and Socialists;;;;;;;;;;;;;
-VLG_socialist_2;Volga Labour Party;;;;;;;;;;;;;
+VLG_socialist_2;Volga Labor Party;;;;;;;;;;;;;
 VLG_radicals;Radical Party;;;;;;;;;;;;;
 VLG_liberal_2;The All-German Landtag;;;;;;;;;;;;;
 VLG_reactionary;Royalist Faction;;;;;;;;;;;;;
