--- a/GFM/localisation/LocMergeFile.csv
+++ b/GFM/localisation/LocMergeFile.csv
@@ -99,7 +99,7 @@ start_the_campaign_against_the_guaranis_desc;In 1843, López undertook a bloody c
 student_exchange_and_importation_of_technicians_title;Student Exchange and Importation of Technicians;;;;;;;;;;;;;
 student_exchange_and_importation_of_technicians_desc;Carlos Antonio López, worried with the development of industry, instead of consuming the income gotten with leather and yerba-mate exports and with the tariffs imposed on imports of manufactured products, the new dictator chose to increase the technical expertise of the country, aiming at increasing internal production. Paraguayan students were sent to foreign nations and foreign technicians were contracted.;;;;;;;;;;;;;
 send_solano_lopez_to_europe_title;Send Solano López to Europe;;;;;;;;;;;;;
-send_solano_lopez_to_europe_desc;In 1853, Francisco Solano López, Carlos Antonio López's son, travelled to Europe to buy arms for the Paraguayan army. In Europe he fell in love with Elisa Alicia Lynch, who would live with him until his last days. In Europe he also admired the trappings and pretensions of the French empire of Napoleon III.;;;;;;;;;;;;;
+send_solano_lopez_to_europe_desc;In 1853, Francisco Solano López, Carlos Antonio López's son, traveled to Europe to buy arms for the Paraguayan army. In Europe he fell in love with Elisa Alicia Lynch, who would live with him until his last days. In Europe he also admired the trappings and pretensions of the French empire of Napoleon III.;;;;;;;;;;;;;
 create_bulgaria_romania_title;Create Bulgaria-Romania;;;;;;;;;;;;;
 create_bulgaria_romania_desc;A united and free Bulgarian-Romanian Union will make a formidable and valuable ally.;;;;;;;;;;;;;
 form_bulgaria_romania_bulgaria_title;The $YEAR$ Unification of Bulgaria & Romania;;;;;;;;;;;;;
@@ -1238,11 +1238,11 @@ EVTNAME199936;Mining RGO Change;;;;;;;;;;;;;
 EVTDESC199936;Choose to change a province to the following RGO types, cool down is 25 years for changing, 1 year for not choosing one.;;;;;;;;;;;;;
 EVT199936OPTA;Change a province to produce Coal.;;;;;;;;;;;;;
 EVT199936OPTB;Change a province to produce Iron.;;;;;;;;;;;;;
-EVT199936OPTC;Change a province to produce Sulphur.;;;;;;;;;;;;;
+EVT199936OPTC;Change a province to produce Sulfur.;;;;;;;;;;;;;
 EVT199936OPTD;I'd rather not change anything.;;;;;;;;;;;;;
 199937;Agriculture RGO Change;;;;;;;;;;;;;
 EVTNAME199937;Agriculture RGO Change;;;;;;;;;;;;;
-EVTDESC199937;Choose to change a province to the following RGO types, cool down is 12.5 years for changing, 1 year for not choosing one. Fish require an available costal province, Timber requires forested terrain.;;;;;;;;;;;;;
+EVTDESC199937;Choose to change a province to the following RGO types, cool down is 12.5 years for changing, 1 year for not choosing one. Fish require an available coastal province, Timber requires forested terrain.;;;;;;;;;;;;;
 EVT199937OPTA;Change a province to produce Wool.;;;;;;;;;;;;;
 EVT199937OPTB;Change a province to produce Timber.;;;;;;;;;;;;;
 EVT199937OPTC;Change a province to produce Cotton.;;;;;;;;;;;;;
@@ -1261,7 +1261,7 @@ EVTNAME1998001;Pop Growth Campaign Selection;;;;;;;;;;;;;
 EVTDESC1998001;Choose the level of pop-growth campaign for your nation.;;;;;;;;;;;;;
 #Additional Decisions;;;;;;;;;;;;;;
 rgo_change_mining_title;Change Mining RGO;;;;;;;;;;;;;
-rgo_change_mining_desc;Allows the switching of a single RGO province of the following types: Coal, Iron, Sulphur, or Precious Metal into Coal, Iron, or Sulphur. Causes a cooldown of 25 years.;;;;;;;;;;;;;
+rgo_change_mining_desc;Allows the switching of a single RGO province of the following types: Coal, Iron, Sulfur, or Precious Metal into Coal, Iron, or Sulphur. Causes a cooldown of 25 years.;;;;;;;;;;;;;
 rgo_change_agriculture_title;Change Agriculture RGO;;;;;;;;;;;;;
 rgo_change_agriculture_desc;Allows the switching of a single RGO province of the following types: Grain, Fruit, Fish, Cattle, Wool, Cotton, Timber, or Precious Goods into Grain, Fruit, Fish, Cattle, Wool, Cotton, or Timber. Causes a cool down of 12.5 years.;;;;;;;;;;;;;
 infamy_for_growth_selector_title;Commence a Population Growth Campaign;;;;;;;;;;;;;
