--- a/GFM/localisation/NAF.csv
+++ b/GFM/localisation/NAF.csv
@@ -20,8 +20,8 @@ NAF_fascist_81;Stono Party;Stono Party;Stono Party;;;;;;;;;;;
 NAF_communist_89;Forty Acres Party;Forty Acres Party;Forty Acres Party;;;;;;;;;;;
 NAF_selfdetermination_title;Self-Determination for African Americans?;;;;;;;;;;;;;
 NAF_selfdetermination_desc;With communist revolution successful, there has been a great amount of discussion over the role of African Americans in this new era. Before achieving power, the Communist Party promised blacks the right of self-determination, whatever that might entail. Now it is time to reckon these promises.;;;;;;;;;;;;;
-NAF_constituion_title;Constitution of New Africa;;;;;;;;;;;;;
-NAF_constituion_desc;After centuries of oppression and enslavement, African Americans finally have a sovereign country to call their own. It is time to create a constitution and outline the future of New Africa!;;;;;;;;;;;;;
+NAF_constitution_title;Constitution of New Africa;;;;;;;;;;;;;
+NAF_constitution_desc;After centuries of oppression and enslavement, African Americans finally have a sovereign country to call their own. It is time to create a constitution and outline the future of New Africa!;;;;;;;;;;;;;
 NAF_greater_title;The Manifest Destiny of New Africa;;;;;;;;;;;;;
 NAF_greater_desc;Now that New Africa has secured its place in the world, we must decide how we shall expand. Some are calling for expeditions into the Caribbean. Although others are rallying for New Africa to secure the lands of our slave ancestors in the American South.;;;;;;;;;;;;;
 NAF_HAI_title;Integrate Haiti;;;;;;;;;;;;;
