--- a/GFM/localisation/PDM_CE.csv
+++ b/GFM/localisation/PDM_CE.csv
@@ -521,7 +521,7 @@ EVTNAME16601;Newly Arrived Slaves;;;;;;;;;;;;;
 EVTDESC16601;The black ships from Africa have come in, and we've received more slaves for our nation!;;;;;;;;;;;;;
 EVTNAME16602;Slave Trade Ended!;;;;;;;;;;;;;
 EVTDESC16602;The nation leading the renewed Atlantic slave market has lost the wherewithal to maintain the trade. We will not be able to continue importing slaves in the face of international disapproval without their patronage.;;;;;;;;;;;;;
-EVTNAME16603;Mass Labour Outlawed!;;;;;;;;;;;;;
+EVTNAME16603;Mass Labor Outlawed!;;;;;;;;;;;;;
 EVTDESC16603;Once we may have made slavery the heart of our economy, but those times have passed. The time of mass labour and the slave trade is over, and we now sever all our attachments to those detestable pieces of our history.;;;;;;;;;;;;;
 EVTNAME16604;An End to the Slave Trade;;;;;;;;;;;;;
 EVTDESC16604;With the abolition of slavery in our country, so too will we do our part to end the world's slave trade.;;;;;;;;;;;;;
@@ -648,7 +648,7 @@ EVTDESC31296;Tripolitania is a nominal vassal of ours, but in reality the local 
 EVTNAME31525;The German Confederation;;;;;;;;;;;;;
 EVTDESC31525;The Vienna Congress established a "German Confederation" to take the place of the Holy Roman Empire. It was meant to serve as a diplomatic forum and customs union, but the rivalry between $COUNTRY$ and Prussia has threatened to shatter German unity.\nThe time has come to put Prussia in its place and re-establish $COUNTRY$ as the preeminent German power. Let us break Prussia's strength, once and for all, and remind the lesser German states that it is we who lead the Confederation.;;;;;;;;;;;;;
 EVTNAME32560;The Caucasus War;;;;;;;;;;;;;
-EVTDESC32560;In 1828 several Muslim imams in Dagestan and Chechnya called for a holy war against Russia, which had ruled the region since taking it from Persia in the Treaty of Gulistan. Proclaiming an independent Imamate of the Caucasus, they and their followers waged a guerilla separatist war against Russia throughout most of the nineteenth century.;;;;;;;;;;;;;
+EVTDESC32560;In 1828 several Muslim imams in Dagestan and Chechnya called for a holy war against Russia, which had ruled the region since taking it from Persia in the Treaty of Gulistan. Proclaiming an independent Imamate of the Caucasus, they and their followers waged a guerrilla separatist war against Russia throughout most of the nineteenth century.;;;;;;;;;;;;;
 EVTNAME32561;The Call to Holy War;;;;;;;;;;;;;
 EVTDESC32561;Several imams in Dagestan and Chechnya have given the call for Gazawat, holy war against the infidel Russians who claim to rule these lands. Our people are swept up in the fervor of jihad! Let us join the Imamate of the Caucasus and fight!;;;;;;;;;;;;;
 EVTNAME32562;The Call to Holy War;;;;;;;;;;;;;
