--- a/GFM/localisation/00_GSG_modifiers.csv
+++ b/GFM/localisation/00_GSG_modifiers.csv
@@ -155,7 +155,7 @@ progressive_society_csa_desc;A group of enterprising capitalists have formed a P
 marxist_slaves;Marxist Slaves;;;;;;;;;;;;;
 marxist_slaves_desc;Slaves in this province have been reading and learning the ideas of Marx and other communist philosophers.;;;;;;;;;;;;;
 immigrant_workers_csa;Immigrant Workers;;;;;;;;;;;;;
-immigrant_workers_csa_desc;Factory and owners and other employers in this province have been hiring immigrants and other cheap labour, as they cost less than maintaining slaves.;;;;;;;;;;;;;
+immigrant_workers_csa_desc;Factory and owners and other employers in this province have been hiring immigrants and other cheap labor, as they cost less than maintaining slaves.;;;;;;;;;;;;;
 california_boom_modifier;California Boom;;;;;;;;;;;;;
 california_boom_modifier_desc;Set sail for sunny California!;;;;;;;;;;;;;
 california_slow_boom_modifier;California Boom;;;;;;;;;;;;;
