--- a/GFM/localisation/00_HPM_Misc.csv
+++ b/GFM/localisation/00_HPM_Misc.csv
@@ -650,7 +650,7 @@ rehabilitation_l;Rehabilitation;;;;;;;;;;;;;
 rehabilitation_desc;Convicts are imprisoned with the intent of reforming them and reintroducing them into society.;;;;;;;;;;;;;
 movement_rehabilitation;Rehabilitation of Prisoners Campaign;;;;;;;;;;;;;
 EVTNAME34608;Child Labor Law Passed;;;;;;;;;;;;;
-EVTDESC34608;Following Britain's lead, in $YEAR$ Prussia, under the influence of some religious and social figures, passed a law strictly regulating the amount of child labour that was possible during the year. According to the new legislation, the Prussian government will lay down restrictions on child labor, with the following main points: children under the age of nine are banned from factory labor, children needed to have had at least three years of schooling before working, and children under the age of sixteen could work no more than ten hours per day. Other provisions included mandated rest times and a total ban on night work for children.;;;;;;;;;;;;;
+EVTDESC34608;Following Britain's lead, in $YEAR$ Prussia, under the influence of some religious and social figures, passed a law strictly regulating the amount of child labor that was possible during the year. According to the new legislation, the Prussian government will lay down restrictions on child labor, with the following main points: children under the age of nine are banned from factory labor, children needed to have had at least three years of schooling before working, and children under the age of sixteen could work no more than ten hours per day. Other provisions included mandated rest times and a total ban on night work for children.;;;;;;;;;;;;;
 EVTOPTA34608;Those poor children!;;;;;;;;;;;;;
 EVTOPTB34608;This isn't really necessary. Revoke the law.;;;;;;;;;;;;;
 EVTNAME3700;Chimney Sweepers;;;;;;;;;;;;;
@@ -658,7 +658,7 @@ EVTDESC3700;'A young boy arose from the inside of a chimney and gently sat down 
 EVTOPTA3700;We should consider legislation to end this.;;;;;;;;;;;;;
 EVTOPTB3700;Hard work is the foundation of a good moral character.;;;;;;;;;;;;;
 EVTNAME370000002;Long Work Hours;;;;;;;;;;;;;
-EVTDESC370000002;'The factories extend their flanks of fouler brick one after another, bare, with shutterless windows, like economical and colossal prisons... and inside, lit by gas-jets and deafened by the uproar of their own labour, toil thousands of workmen, penned in, regimented, hands active, feet motionless, all day and every day, mechanically serving their machines...' \n The hard work that the city's workers perform has outraged many, and a committee has been formed to tackle the rough working conditions.;;;;;;;;;;;;;
+EVTDESC370000002;'The factories extend their flanks of fouler brick one after another, bare, with shutterless windows, like economical and colossal prisons... and inside, lit by gas-jets and deafened by the uproar of their own labor, toil thousands of workmen, penned in, regimented, hands active, feet motionless, all day and every day, mechanically serving their machines...' \n The hard work that the city's workers perform has outraged many, and a committee has been formed to tackle the rough working conditions.;;;;;;;;;;;;;
 EVTOPTA370000002;We should consider legislation to change this.;;;;;;;;;;;;;
 EVTOPTB370000002;Hard work is the foundation of a good moral character.;;;;;;;;;;;;;
 NORMAL_WAR_TAKE_NAME_RUS_CIR;$ORDER$ Caucasian War;;;;;;;;;;;;;
