--- a/GFM/localisation/SarifLocContributions.csv
+++ b/GFM/localisation/SarifLocContributions.csv
@@ -133,7 +133,7 @@ greater_colombia_desc; We have united a majority of our Hispanic American brothe
 andean_civil_war; The Andean Brother's War;;;;;;;;;;;;;
 andean_civil_war_desc; This war will determine the entire fate of Latin America!;;;;;;;;;;;;;
 andean_military_reforms; Modernizing the Andean Military;;;;;;;;;;;;;
-andean_military_reforms_desc; In order to protect ourselves from rivalling countries both in South America and the Imperialists in Europe, we must create an army capable of respect.;;;;;;;;;;;;;
+andean_military_reforms_desc; In order to protect ourselves from rivaling countries both in South America and the Imperialists in Europe, we must create an army capable of respect.;;;;;;;;;;;;;
 catholic_superiority; Proud Catholic Nation;;;;;;;;;;;;;
 catholic_superiority_desc;We will embrace our Catholicism and use it to unite our people!;;;;;;;;;;;;;
 Day_of_the_Sea;Día del Mar;;;;;;;;;;;;;
