--- a/GFM/localisation/00_HPM_Misc.csv
+++ b/GFM/localisation/00_HPM_Misc.csv
@@ -303,7 +303,7 @@ islamic_fundamentalists_name;Islamic Fundamentalists;;;;;;;;;;;;;
 islamic_fundamentalists_desc;Islamic fundamentalists believe that Islam is based on the Qur'an, Hadith and Sunnah and "criticize the tradition, the commentaries, popular religious practices (maraboutism, the cult of saints), deviations, and superstitions". They aim to return to the founding texts, shake off the foreign decadence and to overthrow the government and establish a fundamentalist state.;;;;;;;;;;;;;
 islamic_fundamentalists_army;Islamic Fundamentalists;;;;;;;;;;;;;
 theocracy;Theocracy;;;;;;;;;;;;;
-artillery_production_desc;The Industrial Revolution of the 19th century affected practically all areas of human endeavour, and the production of artillery was no exception. What had previously been a lengthy process of cast molding bronze cannons would -- in the hands of luminaries of the industry, such as Alfred Krupp or Hiram Maxim -- become an industrialized and exact science.;;;;;;;;;;;;;
+artillery_production_desc;The Industrial Revolution of the 19th century affected practically all areas of human endeavor, and the production of artillery was no exception. What had previously been a lengthy process of cast molding bronze cannons would -- in the hands of luminaries of the industry, such as Alfred Krupp or Hiram Maxim -- become an industrialized and exact science.;;;;;;;;;;;;;
 serfdom_not_abolished;Serfdom not abolished;;;;;;;;;;;;;
 communist_gov;Communist Regime;;;;;;;;;;;;;
 absolute_monarchy_gov;Absolute Monarchy;;;;;;;;;;;;;
