--- a/GFM/localisation/LocMergeFile.csv
+++ b/GFM/localisation/LocMergeFile.csv
@@ -2170,7 +2170,7 @@ EVTDESC98449;Jewish families in $PROVINCENAME$, having originally arrived in $CO
 EVTNAME98455;The Jewish Homeland;;;;;;;;;;;;;
 EVTDESC98455;Jewish families in $PROVINCENAME$, having originally arrived in $COUNTRY$ as a result of the diaspora, are reportedly planning on emigrating to Israel-- the newly-established Jewish homeland in Angola. We could encourage them to remain, but that might not be a simple matter.;;;;;;;;;;;;;
 fugu_plan_title;The Fugu Plan;;;;;;;;;;;;;
-fugu_plan_desc;His Majesty's government view with favor the establishment in Hokkaido of a national home for the Jewish people, and will use their best endeavours to facilitate the achievement of this object...'\n\nSince we exert a significant influence in Hokkaido, we can issue a declaration expressing our favorable attitude toward the establishment of a national home for the Jewish people there.;;;;;;;;;;;;;
+fugu_plan_desc;His Majesty's government view with favor the establishment in Hokkaido of a national home for the Jewish people, and will use their best endeavors to facilitate the achievement of this object...'\n\nSince we exert a significant influence in Hokkaido, we can issue a declaration expressing our favorable attitude toward the establishment of a national home for the Jewish people there.;;;;;;;;;;;;;
 law_of_return_madagascar_title;Enact the Law of Return;;;;;;;;;;;;;
 law_of_return_madagascar_desc;The Law of Return 5710-$YEAR$ was enacted by the $COUNTRY_ADJ$ Upper House in $YEAR$. The Law declares that "Every $COUNTRY_ADJ$ has the right to come to this country as an immigrant from the Diaspora". A budget that encompasses economical and social incentives, among other promises, was established in the new law. All aimed at the potential immigrants, with every possible effort being made to bring the $COUNTRY_ADJ$ people back home.;;;;;;;;;;;;;
 law_of_return_andinia_title;Enact the Law of Return;;;;;;;;;;;;;
@@ -2340,7 +2340,7 @@ EVTDESC190431;There's been some unfortunate allegations about certain actions of
 EVTOPTA190431;A little money may help?;;;;;;;;;;;;;
 EVTOPTB190431;Bring them home.;;;;;;;;;;;;;
 appoint_thorbecke_title;Grondwetsherziening van $YEAR$;;;;;;;;;;;;;
-appoint_thorbecke_desc;Under prssure from the Revolutions occuring in surrounding countries, King William II of the Netherlands agreed to several demands of the liberal parliamentary opposition  appointed a state commission lead by Johan Rudolph Thorbecke to draft the Constitutional Reform. \n\nThe constitution would severely limit the King's powers and turn over power to the Staates-General. The Dutch constitution remains virtually unchanged to this day.;;;;;;;;;;;;;
+appoint_thorbecke_desc;Under pressure from the Revolutions occurring in surrounding countries, King William II of the Netherlands agreed to several demands of the liberal parliamentary opposition  appointed a state commission lead by Johan Rudolph Thorbecke to draft the Constitutional Reform. \n\nThe constitution would severely limit the King's powers and turn over power to the Staates-General. The Dutch constitution remains virtually unchanged to this day.;;;;;;;;;;;;;
 thorbecke_reforms;Johan Rudolph Thorbecke;;;;;;;;;;;;;
 thorbecke_reforms_desc;Johan Rudolph Thorbecke was a Dutch statesman of a liberal bent, one of the most important Dutch politicians of the 19th century. In 1848, he virtually single-handedly drafted the revision of the Constitution of the Netherlands, giving less power to the king and more to the States General, and guaranteeing more religious, personal and political freedom to the people.;;;;;;;;;;;;;
 BYZ_ADJ;Byzantine;byzantin;Byzantinisch;;Bizantina;;;;;;;;;
@@ -2524,7 +2524,7 @@ EVTNAME6016823;The New $FROMCOUNTRY_ADJ$ Masters;;;;;;;;;;;;;
 EVTDESC6016823;With the union of our old masters in the greater country of $FROMCOUNTRY$, our new overlords started to make the arrangements for our renewed vassalage to the $FROMCOUNTRY_ADJ$ government.;;;;;;;;;;;;;
 EVT6016823OPTA;We have no choice in this matter.;;;;;;;;;;;;;
 EVTNAME6016826;Restoring $COUNTRY_ADJ$ Cores;;;;;;;;;;;;;
-EVTDESC6016826;This is a cleanup event to prevent a bug from occuring. Your cores in your new vassal (if any) will be restored.;;;;;;;;;;;;;
+EVTDESC6016826;This is a cleanup event to prevent a bug from occurring. Your cores in your new vassal (if any) will be restored.;;;;;;;;;;;;;
 EVT6016826OPTA;Nice!;;;;;;;;;;;;;
 EVTNAME4778710;Acquiring a Port;;;;;;;;;;;;;
 EVTDESC4778710;While the powers that be may have voted for our control of the Congo, the fact remains that some countries control the port we require. We must make sure that we will receive it. Without Bas-Congo, we will have no way to access the Congo! §RIf a country declines, the Congo Conference will fail.§W;;;;;;;;;;;;;
