--- a/GFM/localisation/darkness.csv
+++ b/GFM/localisation/darkness.csv
@@ -65,7 +65,7 @@ NAVAL_COMBAT_DETAILS_DISENGAGED;This unit has managed to disengage, and is no lo
 NAVAL_COMBAT_DETAILS_RETREAT;This unit is retreating.;;Diese Einheit befindet sich auf dem Rückzug.;;;;;;;;;;;
 NAVAL_COMBAT_DETAILS_SEEKING;Searching for best target.;;Suche nach dem besten Ziel.;;;;;;;;;;;
 NAVAL_COMBAT_DETAILS_SHOOTING;Firing at §Y$WHO$§!.\n- Damage to Organization §G$ORG$§!\n- Damage to Strength §Y$STR$§!;;Feuert auf §Y$WHO$§!.\n- Schaden an der Organisation §G$ORG$§!\n- Schaden auf Stärke §Y$STR$§!;;;;;;;;;;;
-NAVAL_COMBAT_DETAILS_FILTERING;Click with §GLMB§! to show all ships that are targetting this ship.;;Klickt mit §GLMT§!, um alle Schiffe zu sehen, die auf dieses Schiff zielen.;;;;;;;;;;;
+NAVAL_COMBAT_DETAILS_FILTERING;Click with §GLMB§! to show all ships that are targeting this ship.;;Klickt mit §GLMT§!, um alle Schiffe zu sehen, die auf dieses Schiff zielen.;;;;;;;;;;;
 MAPMODE_NAVAL_TOOLTIP_LEVEL;Naval base level §G$LVL$§!;;Marinestützpunkt-Stufe §G$LVL$§!;;;;;;;;;;;
 MAPMODE_NAVAL_TOOLTIP_NO_BASE;There is not any naval base in this state.;;In diesem Staat befindet sich kein Marinestützpunkt.;;;;;;;;;;;
 MAPMODE_NAVAL_TOOLTIP_CAP;This province §Ynaval supply throughput§! is §G$CAP$§! of total §G$TOT$§!.;;Der §YMarine-Versorgungsdurchsatz§! dieser Provinz beträgt §G$CAP$§! von insgesamt §G$TOT$§!.;;;;;;;;;;;
