--- a/GFM/localisation/00_GSG_events.csv
+++ b/GFM/localisation/00_GSG_events.csv
@@ -399,7 +399,7 @@ EVTOPTD232000000;Name it after our country.;;;;;;;;;;;;;
 EVTOPTE232000000;Name it after a great city.;;;;;;;;;;;;;
 EVTDESC201000;When the Panama Canal was planned, several expeditions were sent in the regions of Central America. The inhabitants of the large jungles of Yucatan narrate stories of old cities and treasures. Adventurers and tomb raiders crossed this area and found ruins or steles. This news maybe interesting for our Archaeologists.;;;;;;;;;;;;;
 EVTNAME201002;The Gold of the Inca;;;;;;;;;;;;;
-EVTDESC201002;The discovery of Machu Picchu has generated newly interest in affairs considering an archeological expedition in the Andes Mountains. The legendary tales of hidden cities, vast gold treasures and valuable artifacts are only an illusion, and an X never, ever marks the spot. However, prominent archaeologists advise, that it could be in our national interest to examine the things in the Andes carefully...;;;;;;;;;;;;;
+EVTDESC201002;The discovery of Machu Picchu has generated newly interest in affairs considering an archaeological expedition in the Andes Mountains. The legendary tales of hidden cities, vast gold treasures and valuable artifacts are only an illusion, and an X never, ever marks the spot. However, prominent archaeologists advise, that it could be in our national interest to examine the things in the Andes carefully...;;;;;;;;;;;;;
 EVTNAME201020;A Hidden Chamber;;;;;;;;;;;;;
 EVTDESC201020;Our archaeologists in Egypt have found a tomb, which seemed plundered by tomb raiders. But when they made further investigations, they found a chamber behind a false wall - full with ancient artifacts.;;;;;;;;;;;;;
 EVTNAME201003;Archaeological Expedition;;;;;;;;;;;;;
