--- a/GFM/localisation/00_GSG_modifiers.csv
+++ b/GFM/localisation/00_GSG_modifiers.csv
@@ -132,8 +132,8 @@ orleans_growth;New Orleans Growing;;;;;;;;;;;;;
 orleans_growth_csa;New Orleans Growing;;;;;;;;;;;;;
 southern_hospitality;Southern Hospitality;;;;;;;;;;;;;
 southern_hospitality_desc;We are good to those people who come into our nation, and we have become well known for this politeness and charity.;;;;;;;;;;;;;
-southern_neighbours;Southern Hospitality;;;;;;;;;;;;;
-southern_neighbours_desc;We welcome foreigners to our lands, and many of our own people act as ambassadors to the countries they visit, bringing news of our great nation.;;;;;;;;;;;;;
+southern_neighbors;Southern Hospitality;;;;;;;;;;;;;
+southern_neighbors_desc;We welcome foreigners to our lands, and many of our own people act as ambassadors to the countries they visit, bringing news of our great nation.;;;;;;;;;;;;;
 national_rifles;National Rifle Association;;;;;;;;;;;;;
 national_rifles_desc;Founded in 1871, the National Rifle Association was originally a set of shooting clubs organized to improve the marksmanship of American soldiers. These shooting clubs improved skill with firearms, and contributed to the military as a whole moving away from the classic style of rank and file warfare, which put focus on volume of fire rather than accuracy.;;;;;;;;;;;;;
 boll_weevils;Boll Weevils;;;;;;;;;;;;;
