--- a/GFM/localisation/00_HPM_Misc.csv
+++ b/GFM/localisation/00_HPM_Misc.csv
@@ -543,7 +543,7 @@ blanco_rebels_desc;Blancos seek to topple the Colorado government and install th
 blanco_rebels_army;Blanco Rebels;;;;;;;;;;;;;
 separatist_rebels_title;Patriot;;;;;;;;;;;;;
 separatist_rebels_name;$CULTURE$ Patriots;;;;;;;;;;;;;
-separatist_rebels_desc;Patriot rebels dream of unification with their cultural kin under a free banner, and any province they gain control of will eventually defect to a neighbouring country of their culture.;;;;;;;;;;;;;
+separatist_rebels_desc;Patriot rebels dream of unification with their cultural kin under a free banner, and any province they gain control of will eventually defect to a neighboring country of their culture.;;;;;;;;;;;;;
 separatist_rebels_army;$CULTURE$ Patriots;;;;;;;;;;;;;
 afro_latino;Afro Latino;;;;;;;;;;;;;
 NOT_STRONGER_ARMY_THAN;Does not have a stronger military than ;;;;;;;;;;;;;
