--- a/GFM/localisation/Gott mit uns.csv
+++ b/GFM/localisation/Gott mit uns.csv
@@ -147,7 +147,7 @@ EVT201027OPTA;Stockpile the most useless stuff in the world? What?;;;;;;;;;;;;;
 EVT201025OPTA;That was clearly a great adventure. These scientists are heroes!;;;;;;;;;;;;;
 EVT201025OPTB;Dinosaurs? Hidden valley? Are you kidding me?!;;;;;;;;;;;;;
 EVT201028OPTA;Gently... carefully... I'll do it...;;;;;;;;;;;;;
-EVT201028OPTB;I know this scene - it never works out. Grab the damn artefact and RUN!;;;;;;;;;;;;;
+EVT201028OPTB;I know this scene - it never works out. Grab the damn artifact and RUN!;;;;;;;;;;;;;
 EVT201029OPTA;RUN!;;;;;;;;;;;;;
 EVT201030OPTA;I had seen this coming, damn!;;;;;;;;;;;;;
 EVT201031OPTA;Damn you, Belloq!;;;;;;;;;;;;;
