--- a/GFM/localisation/darkness_3_03.csv
+++ b/GFM/localisation/darkness_3_03.csv
@@ -4,7 +4,7 @@ cut_down_to_size_boxer_short;Force China to pay for the Boxer's crimes.;;Zwinge 
 LACK_OF_MAINTENANCE_GOODS;Lack of maintenance goods;;Ungenügend Wartungsgüter;;;;;;;;;;;
 AIREASON_TOO_MANY_CRISIS_WARGOALS;Added Wargoals;;Hinzugefügte Kriegsziele;;;;;;;;;;;
 AIREASON_NOT_OVERLORD;Not my Overlord;;Nicht mein Herrscher;;;;;;;;;;;
-INFLUENCE_SPHERE_NEIGHBOUR;Neighbouring sphere member;;Benachbarter Spherenmitglied;;;;;;;;;;;
+INFLUENCE_SPHERE_NEIGHBOUR;Neighboring sphere member;;Benachbarter Spherenmitglied;;;;;;;;;;;
 col_liferate_techs;Researching the following will help deal with the local life rating:;;Folgende Forschungen zu erfoschen wird mit den lokalen Lebensbeschaffenheiten helfen:;;;;;;;;;;;
 SOIS_HAS_REBELS_WARNING;Rebels have risen against our Sphere members: §Y$LIST$§!;;Rebellen haben bei Spherenmitgliedern rebelliert: §Y$LIST$§!;;;;;;;;;;;
 ALLIANCE_INVALID_GPS_IN_CRISIS;The Alliance between §Ytwo Great Powers§! can't be formed when the §Ycrisis§! is active.;;Eine Allianz zwischen §Yzwei Großmächten§! kann nicht geformt werden während die §YKrise§! aktiv ist.;;;;;;;;;;;
