massive typo fixes

--- a/GFM/localisation/00_GSG_decisions.csv
+++ b/GFM/localisation/00_GSG_decisions.csv
@@ -301,7 +301,7 @@ tex_support_csa_desc;With America divided between the Northern Union and the Sou
 enact_the_homestead_act_csa_title;Enact the Homestead Act;;;;;;;;;;;;;
 enact_the_homestead_act_csa_desc;Signed into law in 1862, the purpose of the Homestead Act was to further encourage peaceful immigration from other countries, primarily Europe, and in this it was a major success. This act grants those immigrant farmers who apply some 160 acres of federal land in areas not controlled by $COUNTRY_ADJ$ plantation owners.;;;;;;;;;;;;;
 custers_expedition_csa_title;Expedition to the Black Hills;;;;;;;;;;;;;
-custers_expedition_csa_desc;Rumours say that in Sioux territory there are rivers full of gold, untapped to this day. For the prosperity of our nation it is best to investigate this, and so we have at the ready a veteran Samuel Cooper to send into the Black Hills...;;;;;;;;;;;;;
+custers_expedition_csa_desc;Rumors say that in Sioux territory there are rivers full of gold, untapped to this day. For the prosperity of our nation it is best to investigate this, and so we have at the ready a veteran Samuel Cooper to send into the Black Hills...;;;;;;;;;;;;;
 pro_slavery_propaganda_title;Spread Pro-Slavery Propaganda;;;;;;;;;;;;;
 pro_slavery_propaganda_desc;§RGain 2 infamy§! As times wears on, the institution of slavery continues to grow more and more unpopular. We will not stand for this! To improve our grip on slavery, we must spread word amongst the people that slavery is good, and will lead to a better nation. So long as there is $COUNTRY_ADJ$ doubt about slavery, this propaganda must go on.;;;;;;;;;;;;;
 enslave_the_free_title;Enslave the Now Free;;;;;;;;;;;;;
