--- a/GFM/localisation/00_HPM_Misc.csv
+++ b/GFM/localisation/00_HPM_Misc.csv
@@ -274,7 +274,7 @@ administrative_efficiency_modifier;Administrative Efficiency;;;;;;;;;;;;;
 MODIFIER_ADMINISTRATIVE_EFFICIENCY;Administrative Efficiency;;;;;;;;;;;;;
 fascist_rebels_title;Fascist;;;;;;;;;;;;;
 fascist_rebels_name;$COUNTRY$ Fascists;;;;;;;;;;;;;
-fascist_rebels_desc;The Black Guard paramilitary organizations are revolutionaries driven by the radical new ideology of fascism. Labouring under the dogmas of violence and mass action, these battle trained revolutionaries will stop at nothing to overthrow old monarchies and young democracies alike, and replace them all with the absolutes of the Leviathan fascist state.;;;;;;;;;;;;;
+fascist_rebels_desc;The Black Guard paramilitary organizations are revolutionaries driven by the radical new ideology of fascism. Laboring under the dogmas of violence and mass action, these battle trained revolutionaries will stop at nothing to overthrow old monarchies and young democracies alike, and replace them all with the absolutes of the Leviathan fascist state.;;;;;;;;;;;;;
 fascist_rebels_army;$COUNTRY_ADJ$ Paramilitary;;;;;;;;;;;;;
 botanical_expedition_threatened;Botanical Expedition Threatened;;;;;;;;;;;;;
 participates_in_botanical_expedition;Participates in Botanical Expedition;;;;;;;;;;;;;
