--- a/GFM/localisation/LocMergeFile.csv
+++ b/GFM/localisation/LocMergeFile.csv
@@ -84,7 +84,7 @@ EVTDESC146308;To encourage the further evolution of Brazilian literature and art
 EVTNAME137400;Nieuw Woordenboek der Nederlandsche;;;;;;;;;;;;;
 EVTDESC137400;The 'Nieuw Woordenboek der Nederlandsche Taal van Van Dale' was the first Dutch dictionary. It was first published after the death of Johan Hendrik van Dale, who had started work on his New Dictionary of the Dutch Language in 1867. This was built upon the original same-named 1864 dictionary of I.M. Calisch and N.S. Calisch. Van Dale did not see the new work published in his lifetime, as he died in 1872. It was finished by his student Jan Manhave.;;;;;;;;;;;;;
 EVTNAME137401;Vrije Universiteit Amsterdam;;;;;;;;;;;;;
-EVTDESC137401;The Vrije Universiteit Amsterdam was founded in $YEAR$ by a group of orthodox-Protestant Christians led by Abraham Kuyper as the first Calvinist university in the Netherlands. Kuyper was a theologian, journalist, politician, and prime minister of the Netherlands from 1901 to 1905. He was a professor of theology as well as the university's first rector magnificus (academic president). Kuyper's philosophy is referred to as Neo-Calvinism. As a reflection of his beliefs, Vrije Universiteit literally means 'Free University' (or 'Liberated University') to signify independence from both government and church. Teaching at the Vrije Universiteit started in 1880 in rooms rented at the Scottish Missionary Church (now the Kleine Komedie theatre), along the Amstel river in Amsterdam's city center. Here, Kuyper and four fellow professors began lecturing in three faculties: theology, law, and the arts.;;;;;;;;;;;;;
+EVTDESC137401;The Vrije Universiteit Amsterdam was founded in $YEAR$ by a group of orthodox-Protestant Christians led by Abraham Kuyper as the first Calvinist university in the Netherlands. Kuyper was a theologian, journalist, politician, and prime minister of the Netherlands from 1901 to 1905. He was a professor of theology as well as the university's first rector magnificus (academic president). Kuyper's philosophy is referred to as Neo-Calvinism. As a reflection of his beliefs, Vrije Universiteit literally means 'Free University' (or 'Liberated University') to signify independence from both government and church. Teaching at the Vrije Universiteit started in 1880 in rooms rented at the Scottish Missionary Church (now the Kleine Komedie theater), along the Amstel river in Amsterdam's city center. Here, Kuyper and four fellow professors began lecturing in three faculties: theology, law, and the arts.;;;;;;;;;;;;;
 act_on_language_in_bohemia_title;Act on Language in Bohemia;;;;;;;;;;;;;
 act_on_language_in_bohemia_desc;The rise of Czech nationalism led activist Czech politicians to increasingly demand reform in Bohemia that would make Czech an official language of internal administration on par with German, and require all civil servants to know both languages. Needing Czech support in Parliament, on 5 March 1897 Austrian prime minister Badeni introduced a law that would fulfill the Czech demands. Bohemian Germans condemn the proposed legislation, which would benefit Czechs greatly since they learned both Czech and German in school while the Germans had not been required to learn Czech.;;;;;;;;;;;;;
 state_visit_to_argentina_title;State Visit to Argentina;;;;;;;;;;;;;
@@ -1203,7 +1203,7 @@ fairer_taxation2;Taxation Relief;Allégement de la fiscalité;Besteuerung Relief;;
 fairer_taxation3;Taxation Relief;Allégement de la fiscalité;Besteuerung Relief;;Alivio de impuestos;;;;;;;;;
 migration_factor_reduced;No Migration from Province;;;;;;;;;;;;;
 migration_factor_reduced_title;No Migration from Province;;;;;;;;;;;;;
-migration_factor_reduced_desc;Due to the unemployment caused by switching to Lumber RGO, this province will not have any migration for two years untill pops can be reemployed with time.;;;;;;;;;;;;;
+migration_factor_reduced_desc;Due to the unemployment caused by switching to Lumber RGO, this province will not have any migration for two years until pops can be reemployed with time.;;;;;;;;;;;;;
 timber_employment_fix;Timber Employment Fix;;;;;;;;;;;;;
 timber_employment_fix_title;Timber Employment Fix;;;;;;;;;;;;;
 timber_employment_fix_desc;A temporary market reset for Lumber prices in order to fix the unemployment bug caused by switching a province to a Lumber RGO.;;;;;;;;;;;;;
@@ -1625,8 +1625,8 @@ toady;Toady: §GAttack +1;;;;;;;;;;;;;
 yesman;Yesman;;;;;;;;;;;;;
 brownnoser;Brownnoser: §GAttack +1;;;;;;;;;;;;;
 spoiled;Spoiled: §GAttack +2;;;;;;;;;;;;;
-school_of_defense;School of Defence: §GDefence +3;;;;;;;;;;;;;
-school_of_offense;School of Offence: §GAttack +1;;;;;;;;;;;;;
+school_of_defense;School of Defense: §GDefence +3;;;;;;;;;;;;;
+school_of_offense;School of Offense: §GAttack +1;;;;;;;;;;;;;
 school_of_the_bayonet;School of the Bayonet: §GAttack +2, Defence +1;;;;;;;;;;;;;
 school_of_firepower;School of Firepower: §GAttack +1;;;;;;;;;;;;;
 artillerist;Artillerest: §GDefence +1;;;;;;;;;;;;;
