--- a/GFM/localisation/FlavoursModNewCountries.csv
+++ b/GFM/localisation/FlavoursModNewCountries.csv
@@ -217,7 +217,7 @@ MSK_prussian_constitutionalism;Mosquito Kingdom;;;;;;;;;;;;;
 MSK_hms_government;Mosquito Kingdom;;;;;;;;;;;;;
 MSK_dominion;Reserva Mosquitia;;;;;;;;;;;;;
 BLZ_dominion;British Honduras;;;;;;;;;;;;;
-MGL_theocracy;Bogd Khaanate;;;;;;;;;;;;;
+MGL_theocracy;Bogd Khanate;;;;;;;;;;;;;
 MGL_proletarian_dictatorship;Mongolian People's Republic;;;;;;;;;;;;;
 ALS_dominion;Elsass-Lothringen;;;;;;;;;;;;;
 MCK_absolute_empire;The Empire of Manchuria;;;;;;;;;;;;;
