--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -2541,8 +2541,8 @@ WAS_reactionary;Radical Nationalists;Radical Nationalists;Radical Nationalists;;
 WAS_reactionary_2;Country Party;Country Party;Country Party;;;;;;;;;;;
 WAS_radical;Radical Liberals;Radical Liberals;Radical Liberals;;;;;;;;;;;
 WAS_fascist;Fascist Party;Fascist Party;Fascist Party;;;;;;;;;;;
-WES;Westfalen;;;;;;;;;;;;;
-WES_ADJ;Westphalian ;;;;;;;;;;;;;
+WES;Westphalia;;;;;;;;;;;;;
+WES_ADJ;Westphalian;;;;;;;;;;;;;
 WES_liberal;Liberaldem. Partei;Liberaldem. Partei;Liberaldem. Partei;;;;;;;;;;;
 WES_conservative;Zentrumspartei;Zentrumspartei;Zentrumspartei;;;;;;;;;;;
 WES_liberal_2;Nationalliberale ;Nationalliberale ;Nationalliberale ;;;;;;;;;;;
