--- a/GFM/localisation/00_GSG_decisions.csv
+++ b/GFM/localisation/00_GSG_decisions.csv
@@ -195,7 +195,7 @@ form_greater_netherlands_desc;§RGain 5 infamy§! For too long have foreign powers
 ainu_lands_title;Formally Settling the Islands;;;;;;;;;;;;;
 ainu_lands_desc;Now that we have been recognized as a westernized nation we can officially settle the islands to our north without the threat of Japanese intervention ;;;;;;;;;;;;;
 claim_interior_title;Claiming the Interior;;;;;;;;;;;;;
-claim_interior_desc;Now that we have gained independance from Britain, we can now assert our control over the outback.;;;;;;;;;;;;;
+claim_interior_desc;Now that we have gained independence from Britain, we can now assert our control over the outback.;;;;;;;;;;;;;
 reform_hansa_title;Reforming the Hansa;;;;;;;;;;;;;
 reform_hansa_desc;The Hanseatic League used to be a major economic, political and military player in Northern Europe, protecting and pressing the interests of its member cities and through its wealth, maintaining many privileges for its citizens. Although the Hansa had lost members and power to the point of absolute irrelevance by the time of the last official Hansetag in 1669, Lubeck, Hamburg and Bremen remain de facto members to this day. Citing our political renaissance, we can now propose the creation of a new Hansa.;;;;;;;;;;;;;
 italian_government_title;Italian Rulership;;;;;;;;;;;;;
@@ -207,7 +207,7 @@ PNJ_embrace_baluchi_minority_desc;The Sikh Empire is a secular, tolerant state. 
 boer_government_title;The Boer Majority;;;;;;;;;;;;;
 boer_government_desc;The Boers currently outnumber the British settlers in South Africa, our best course of action would be to accept their majority rule if we're to have any chance in this hostile scrap of land.;;;;;;;;;;;;;
 claim_NZ_interior_title;Claiming the Interior;;;;;;;;;;;;;
-claim_NZ_interior_desc;Now that we have gained independance from Britain, we can now assert our control over our islands.;;;;;;;;;;;;;
+claim_NZ_interior_desc;Now that we have gained independence from Britain, we can now assert our control over our islands.;;;;;;;;;;;;;
 integrate_picard_title;Integrating the Picard;;;;;;;;;;;;;
 integrate_picard_desc;Now that the Picard people are under our control we should integrate them into our nation and extend them full rights.;;;;;;;;;;;;;
 the_golden_circle_USCA_title;Integrate the FRCA;;;;;;;;;;;;;
